# LinuxPipe

./: .gitignore  CMakeLists.txt  CommunicationPipe.cpp  CommunicationPipe.h  IPipeCallBack.h  PipeRequestCallBack.cpp  PipeRequestCallBack.h  PipeResponseCallBack.cpp  PipeResponseCallBack.h  README.md  application_s  bulid.sh  main.cpp  rapidjson.sln  rapidjson.vcxproj  rapidjson.vcxproj.filters  stdafx.h  util.cpp  util.h
